welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
    } avance()
      ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (vuBiscuit == false){
  ^