welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  while (vuBiscuit == false){
    
 	  for (i <- 1 to 6){
  	  
  	  if (estSurBiscuit()){
  	    vuBiscuit = true
    } avance()
} 
	  recule();recule();recule();recule();recule();recule()
	  if (vuBiscuit){
 	   return true;
  }
    droite(); avance();gauche()
}
}